loading elements and cleaning. Add more test files, prepare for proper templating.

--- a/rooms.html
+++ b/rooms.html
@@ -3,7 +3,8 @@
 <html>
 <head>
   <title>Simmons/Rooms</title>
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet/less" type="text/css" href="css/style.less" />
+  <script src="js/less.js" type="text/javascript"></script>
 </head>
 <body>
 
