--- a/directory.html
+++ b/directory.html
@@ -4,7 +4,8 @@
 <html>
 <head>
   <title>Simmons/Directory</title>
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet/less" type="text/css" href="css/style.less" />
+  <script src="js/less.js" type="text/javascript"></script>
 </head>
 <body>
 
