--- a/login.html
+++ b/login.html
@@ -4,6 +4,8 @@
 <head>
   <title>Simmons/Login</title>
   <link rel="stylesheet/less" type="text/css" href="css/style.less" />
+  <link rel="stylesheet/less" type="text/css" href="css/input.less" />
+  <link rel="stylesheet/less" type="text/css" href="css/font.less" />
   <script src="js/less.js" type="text/javascript"></script>
 </head>
 <body>
@@ -20,42 +22,13 @@
 </div>
 
 <div class="horz ctrls">
- 
+	<div class="content">
+		<form name="login" action="handler?session_id={{session_id}}" method="POST">
+			<input type="text" name="username" placeholder="Username"><br>
+			<input type="password" name="password" placeholder="Password"><br>
+			<input type="submit" value="Submit">
+		</form>
+	<div>
 </div>
-
-<div class="horz rslts">
-  <div class="content">
-    <div class="lists">
-      <div class="results-list-doubles-label">Doubles</div>
-      <div class="results-list-doubles">
-      <div class="item" title="123">
-        <span class="number"> 123 </span>
-        <span class="size"> 042 sq. ft.</span>
-        <span class="view">' Cambridge '</span>
-      </div>
-      <div class="item" title="123">
-        <span class="number"> 123 </span>
-        <span class="size"> 042 sq. ft.</span>
-        <span class="view">' Cambridge '</span>
-      </div>
-      </div>
-      <div class="results-list-singles-label">Singles</div>
-      <div class="results-list-singles">
-      <div class="item" title="123">
-        <span class="number"> 123 </span>
-        <span class="size"> 042 sq. ft.</span>
-        <span class="view">' Cambridge '</span>
-      </div>
-      <div class="item" title="123">
-        <span class="number"> 123 </span>
-        <span class="size"> 042 sq. ft.</span>
-        <span class="view">' Cambridge '</span>
-      </div>
-      </div>
-    </div>
-
-  </div>
-</div>
-
 </body>
 </html>
