--- a/rooms.html
+++ b/rooms.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet/less" type="text/css" href="css/map.less" />
   <link rel="stylesheet/less" type="text/css" href="css/input.less" />
   <link rel="stylesheet/less" type="text/css" href="css/layout.less" />
+  <link rel="stylesheet/less" type="text/css" href="css/search-results.less" />
   <script src="js/less.js" type="text/javascript"></script>
 </head>
 <body>
@@ -2234,37 +2235,34 @@
 </div>
 
 <div class="horz rslts">
-  <div class="content">
-    <div class="lists">
-      <div class="results-list-doubles-label">Doubles</div>
-      <div class="results-list-doubles">
-      <div class="item" title="123">
-        <span class="number"> 123 </span>
-        <span class="size"> 042 sq. ft.</span>
-        <span class="view">' Cambridge '</span>
-      </div>
-      <div class="item" title="123">
-        <span class="number"> 123 </span>
-        <span class="size"> 042 sq. ft.</span>
-        <span class="view">' Cambridge '</span>
-      </div>
-      </div>
-      <div class="results-list-singles-label">Singles</div>
-      <div class="results-list-singles">
-      <div class="item" title="123">
-        <span class="number"> 123 </span>
-        <span class="size"> 042 sq. ft.</span>
-        <span class="view">' Cambridge '</span>
-      </div>
-      <div class="item" title="123">
-        <span class="number"> 123 </span>
-        <span class="size"> 042 sq. ft.</span>
-        <span class="view">' Cambridge '</span>
-      </div>
-      </div>
-    </div>
-
-  </div>
+	<div class="columns">
+		<div class="column">
+			<div class="label">Doubles</div>
+			<div class="item" title="123">
+				<span class="number"> 123 </span>
+				<span class="size"> 042 sq. ft.</span>
+				<span class="view">' Cambridge '</span>
+			</div>
+			<div class="item" title="123">
+				<span class="number"> 123 </span>
+				<span class="size"> 042 sq. ft.</span>
+				<span class="view">' Cambridge '</span>
+			</div>
+		</div>
+		<div class="column">
+			<div class="label">Singles</div>
+			<div class="item" title="123">
+				<span class="number"> 123 </span>
+				<span class="size"> 042 sq. ft.</span>
+				<span class="view">' Cambridge '</span>
+			</div>
+			<div class="item" title="123">
+				<span class="number"> 123 </span>
+				<span class="size"> 042 sq. ft.</span>
+				<span class="view">' Cambridge '</span>
+			</div>
+		</div>
+	</div>
 </div>
 
 </body>
