Prettify input test.

--- a/colors.html
+++ b/colors.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
 <head>
-    <title>Colors - Simmons Hall</title>
+    <title>Color Test - Simmons Hall</title>
     <link href="css/swatches.css" rel="stylesheet">
   <link rel="stylesheet/less" type="text/css" href="css/color.less" />
   <link rel="stylesheet/less" type="text/css" href="css/page.less" />
@@ -18,7 +18,7 @@
     	<img class="masthead-img" src="img/masthead_sq.png">
     </div>
     <div class="masthead">
-    	<span>SIMMONS/<b>Colors</b></span>
+    	<span>SIMMONS/<b>Color Test</b></span>
     </div>
   </div>
 </div>
