--- a/input.html
+++ b/input.html
@@ -1,45 +1,86 @@
+<!DOCTYPE html>
+
 <html>
-	<head>
-		<link rel='stylesheet/less' type='text/css' href='css/input.less' />
-		<script src='js/less.js' type='text/javascript'></script>
-	</head>
-	<body>
-		<form>
-			<input type="checkbox" value="None" id="squaredFour" name="check" />
-			<label for="squaredFour">Test Label</label>
-		</form>
-		<select>
-		  <option value="volvo">Volvo</option>
-		  <option value="saab">Saab</option>
-		  <option value="mercedes">Mercedes</option>
-		  <option value="audi">Audi</option>
-		</select>
-		<form>
-			First name: <input type="text" name="firstname"><br>
-			Last name: <input type="text" name="lastname">
-		</form>
-		<form>
-			Password: <input type="password" name="pwd">
-		</form>
-		<form>
-			<input type="radio" name="sex" id='male' value="None">
-			<label for="male">Male</label><br/><br/>
-			<input type="radio" name="sex" id='female' value="None">
-			<label for="female">Female</label><br/><br/>
-			<input type="radio" name="sex" id='other' value="None">
-			<label for="other">Other</label><br/><br/>
-		</form> 
-		<form>
-			<input type="checkbox" name="vehicle" id='bike' value="Bike">
-			<label for="bike">I have a bike</label><br/><br/>
-			<input type="checkbox" name="vehicle" id='car' value="Car">
-			<label for="car">I have a car</label><br/><br/>
-		</form>
- 		<button type="button">Click Me!</button> 
-		<form>
-			Username: <input type="text" name="user">
+<head>
+  <title>Input Test - Simmons Hall</title>
+  <link rel="stylesheet/less" type="text/css" href="css/page.less" />
+  <link rel="stylesheet/less" type="text/css" href="css/masthead.less" />
+  <link rel="stylesheet/less" type="text/css" href="css/searchbar.less" />
+  <link rel="stylesheet/less" type="text/css" href="css/map.less" />
+  <link rel="stylesheet/less" type="text/css" href="css/input.less" />
+  <link rel="stylesheet/less" type="text/css" href="css/layout.less" />
+  <link rel="stylesheet/less" type="text/css" href="css/search-results.less" />
+  <script src="js/less.js" type="text/javascript"></script>
+</head>
+<body>
+
+<div class="horz header">
+  <div class="content">
+    <div class="masthead">
+    	<img class="masthead-img" src="img/masthead_sq.png">
+    </div>
+    <div class="masthead">
+    	<span>SIMMONS/<b>Input Test</b></span>
+    </div>
+  </div>
+</div>
+
+<div class="horz ctrls">
+  <div class="content">
+
+    <div class="horz controls">
+      <div class="label">Radio Buttons</div>
+	<input type="radio" name="gender" id='female' value="None" checked="checked">
+	<label for="female">Female</label>
+	<input type="radio" name="gender" id='male' value="None">
+	<label for="male">Male</label>
+	<input type="radio" name="gender" id='other' value="None">
+	<label for="other">Other</label>
+    </div>
+
+    <div class="horz controls">
+      <div class="label">Select Element*</div>
+	<select>
+		<option value="volvo">Volvo</option>
+		<option value="saab">Saab</option>
+		<option value="mercedes">Mercedes</option>
+		<option value="audi">Audi</option>
+	</select>
+    </div>
+
+    <div class="horz controls">
+      <div class="label">Buttons</div>
+	<button type="button">Click Me!</button> 
+    </div>
+
+    <div class="horz controls">
+      <div class="label">Checkboxes</div>
+	<input type="checkbox" name="vehicle" id='bike' value="Bike">
+	<label for="bike">I have a bike</label>
+	<input type="checkbox" name="vehicle" id='car' value="Car">
+	<label for="car">I have a car</label>
+    </div>
+
+    <div class="footnote">
+      * : Please don't use select tags if you can avoid it. Very difficult to make look nice cross-browser.
+    </div>
+
+    <div class="horz controls">
+      <div class="label">Sample Form**</div>
+		<form name="login" action="" method="">
+			<input type="text" name="username" placeholder="Username"><br>
+			<input type="password" name="password" placeholder="Password"><br>
 			<input type="submit" value="Submit">
 		</form>
-		<textarea rows="4" cols="50"></textarea>
-	</body>
+    </div>
+
+    <div class="footnote">
+      ** : Try to use placeholder text and labels in form. It's easier to format.
+    </div>
+
+  </div>
+
+</div>
+
+</body>
 </html>
