Brings colors in compliance with Cosmos's Style guide.

--- a/colors.html
+++ b/colors.html
@@ -45,45 +45,115 @@
 			</div>
 		</div>
 		<div class="info">
-		Core Colors
+		Vibrant Colors
 		</div>
 	</div>
 	<div class="swatch">
 		<div class="holder">
 			<div class="color-holder">
-				<div class="color light-red"></div>
-				<div class="color light-yellow"></div>
-				<div class="color light-blue"></div>
-				<div class="color light-green"></div>
+				<div class="color pale-red"></div>
+				<div class="color pale-yellow"></div>
+				<div class="color pale-blue"></div>
+				<div class="color pale-green"></div>
 			</div>
 			<div class="shade">
-				<div class="name">.light-red</div>
-				<div class="name">.light-yellow</div>
-				<div class="name">.light-blue</div>
-				<div class="name">.light-green</div>
+				<div class="name">.pale-red</div>
+				<div class="name">.pale-yellow</div>
+				<div class="name">.pale-blue</div>
+				<div class="name">.pale-green</div>
 			</div>
 		</div>
 		<div class="info">
-		Light Colors
+		Soft Colors
 		</div>
 	</div>
 	<div class="swatch">
 		<div class="holder">
 			<div class="color-holder">
 				<div class="color white"></div>
-				<div class="color light-grey"></div>
-				<div class="color grey"></div>
-				<div class="color dark-grey"></div>
+				<div class="color lightest-gray"></div>
+				<div class="color lighter-gray"></div>
+				<div class="color light-gray"></div>
+				<div class="color gray"></div>
+				<div class="color dark-gray"></div>
+				<div class="color darker-gray"></div>
+				<div class="color darkest-gray"></div>
+				<div class="color black"></div>
 			</div>
 			<div class="shade">
 				<div class="name">.white</div>
-				<div class="name">.light-grey</div>
-				<div class="name">.grey</div>
-				<div class="name">.dark-grey</div>
+				<div class="name">.lightest-gray</div>
+				<div class="name">.lighter-gray</div>
+				<div class="name">.light-gray</div>
+				<div class="name">.gray</div>
+				<div class="name">.dark-gray</div>
+				<div class="name">.darker-gray</div>
+				<div class="name">.darkest-gray</div>
+				<div class="name">.black</div>
 			</div>
 		</div>
 		<div class="info">
-		Greyscale Colors
+		Greyscale
+		</div>
+	</div>
+	<div class="swatch">
+		<div class="holder">
+			<div class="color-holder">
+				<div class="color pale-red"></div>
+				<div class="color red"></div>
+			</div>
+			<div class="shade">
+				<div class="name">.pale-red</div>
+				<div class="name">.red</div>
+			</div>
+		</div>
+		<div class="info">
+		Red
+		</div>
+	</div>
+	<div class="swatch">
+		<div class="holder">
+			<div class="color-holder">
+				<div class="color pale-yellow"></div>
+				<div class="color yellow"></div>
+			</div>
+			<div class="shade">
+				<div class="name">.pale-yellow</div>
+				<div class="name">.yellow</div>
+			</div>
+		</div>
+		<div class="info">
+		Yellow
+		</div>
+	</div>
+	<div class="swatch">
+		<div class="holder">
+			<div class="color-holder">
+				<div class="color pale-blue"></div>
+				<div class="color blue"></div>
+			</div>
+			<div class="shade">
+				<div class="name">.pale-blue</div>
+				<div class="name">.blue</div>
+			</div>
+		</div>
+		<div class="info">
+		Blue
+		</div>
+	</div>
+	<div class="swatch">
+		<div class="holder">
+			<div class="color-holder">
+				<div class="color pale-green"></div>
+				<div class="color green"></div>
+			</div>
+			<div class="shade">
+				<div class="name">.pale-green</div>
+				<div class="name">.green</div>
+			</div>
+		</div>
+		<div class="info">
+		Green
 		</div>
 	</div>
 </div>
